Added left hand default configuration

--- a/software/esp32/platformio.ini
+++ b/software/esp32/platformio.ini
@@ -8,15 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:pico32]
+[platformio]
+default_envs = pico32_left
+
+
+[env:pico32_right]
 platform = espressif32
 board = seeed_xiao_esp32s3
 build_unflags = -std=gnu++11
 build_flags = -std=gnu++17
 framework = arduino
 upload_protocol = esptool
-upload_port = COM14
-monitor_port = COM14
+upload_port = COM18
+monitor_port = COM18
+monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
+lib_deps = 
+	roboticsbrno/ServoESP32@^1.1.1
+
+[env:pico32_left]
+platform = espressif32
+board = seeed_xiao_esp32s3
+build_unflags = -std=gnu++11
+build_flags = -std=gnu++17 -DLEFT_HAND
+framework = arduino
+upload_protocol = esptool
+upload_port = COM18
+monitor_port = COM18
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 lib_deps = 
