Adding build configs for servos home, demo, left/right support

--- a/software/esp32/platformio.ini
+++ b/software/esp32/platformio.ini
@@ -9,32 +9,46 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = pico32_left
+default_envs = demo_right
 
 
-[env:pico32_right]
-platform = espressif32
-board = seeed_xiao_esp32s3
-build_unflags = -std=gnu++11
+[env:right]
 build_flags = -std=gnu++17
-framework = arduino
-upload_protocol = esptool
+upload_port = COM19
+monitor_port = COM19
+
+[env:left]
+build_flags = -std=gnu++17 -DLEFT_HAND
 upload_port = COM18
 monitor_port = COM18
-monitor_speed = 115200
-monitor_filters = esp32_exception_decoder
-lib_deps = 
-	roboticsbrno/ServoESP32@^1.1.1
 
-[env:pico32_left]
+[env:home_right]
+build_flags = -std=gnu++17 -DHOME_SERVOS
+upload_port = COM19
+monitor_port = COM19
+
+[env:home_left]
+build_flags = -std=gnu++17 -DLEFT_HAND -DHOME_SERVOS
+upload_port = COM18
+monitor_port = COM18
+
+[env:demo_right]
+build_flags = -std=gnu++17 -DDEMO
+upload_port = COM19
+monitor_port = COM19
+
+[env:demo_left]
+build_flags = -std=gnu++17 -DLEFT_HAND -DDEMO
+upload_port = COM18
+monitor_port = COM18
+
+
+[env]
 platform = espressif32
 board = seeed_xiao_esp32s3
 build_unflags = -std=gnu++11
-build_flags = -std=gnu++17 -DLEFT_HAND
 framework = arduino
 upload_protocol = esptool
-upload_port = COM18
-monitor_port = COM18
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 lib_deps = 
