adding bluetooth position message handling

--- a/software/esp32/platformio.ini
+++ b/software/esp32/platformio.ini
@@ -9,11 +9,10 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = demo_right
-
+default_envs = right
 
 [env:right]
-build_flags = -std=gnu++17
+build_flags = -std=gnu++17 -DCORE_DEBUG_LEVEL=3
 upload_port = COM19
 monitor_port = COM19
 
