cleaning up when init sequence is done

--- a/software/esp32/platformio.ini
+++ b/software/esp32/platformio.ini
@@ -12,35 +12,34 @@
 default_envs = right
 
 [env:right]
-build_flags = -std=gnu++17 -DCORE_DEBUG_LEVEL=3
+build_flags = !python gitVersion.py -std=gnu++17  -DCORE_DEBUG_LEVEL=3
 upload_port = COM19
 monitor_port = COM19
 
 [env:left]
-build_flags = -std=gnu++17 -DLEFT_HAND
+build_flags = !python gitVersion.py -std=gnu++17  -DLEFT_HAND
 upload_port = COM18
 monitor_port = COM18
 
 [env:home_right]
-build_flags = -std=gnu++17 -DHOME_SERVOS
+build_flags = !python gitVersion.py -std=gnu++17  -DHOME_SERVOS
 upload_port = COM19
 monitor_port = COM19
 
 [env:home_left]
-build_flags = -std=gnu++17 -DLEFT_HAND -DHOME_SERVOS
+build_flags = !python gitVersion.py -std=gnu++17  -DLEFT_HAND -DHOME_SERVOS
 upload_port = COM18
 monitor_port = COM18
 
 [env:demo_right]
-build_flags = -std=gnu++17 -DDEMO
+build_flags = !python gitVersion.py -std=gnu++17  -DDEMO
 upload_port = COM19
 monitor_port = COM19
 
 [env:demo_left]
-build_flags = -std=gnu++17 -DLEFT_HAND -DDEMO
+build_flags = !python gitVersion.py -std=gnu++17  -DLEFT_HAND -DDEMO
 upload_port = COM18
 monitor_port = COM18
-
 
 [env]
 platform = espressif32
@@ -52,3 +51,4 @@ monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 lib_deps = 
 	roboticsbrno/ServoESP32@^1.1.1
+	https://github.com/reivaxy/XEEPROMConfig/archive/refs/tags/v0.1.tar.gz
