Adding Calibration sequence

--- a/software/esp32/platformio.ini
+++ b/software/esp32/platformio.ini
@@ -9,7 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = right
+default_envs = proto
+
+[env:proto]
+build_flags = !python gitVersion.py -std=gnu++17  -DCORE_DEBUG_LEVEL=3
+upload_port = COM14
+monitor_port = COM14
 
 [env:right]
 build_flags = !python gitVersion.py -std=gnu++17  -DCORE_DEBUG_LEVEL=3
