--- a/Apps/Android/app/src/main/AndroidManifest.xml
+++ b/Apps/Android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
             android:exported="false"
             android:label="@string/title_activity_settings" />
         <activity
+            android:name=".AboutActivity"
+            android:exported="false"
+            android:label="@string/title_activity_about" />
+        <activity
+            android:name=".ToolsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_tools" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Kinetix">
