--- a/firmware/esp32/platformio.ini
+++ b/firmware/esp32/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = proto
+default_envs = right
 
 [env:proto]
 build_flags = !python gitVersion.py -std=gnu++17  -DCORE_DEBUG_LEVEL=3
