Added positions love and rock

--- a/firmware/esp32/platformio.ini
+++ b/firmware/esp32/platformio.ini
@@ -9,7 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = right
+default_envs = proto
+
+;this is not working for now
+[env:c3]
+board = seeed_xiao_esp32c3
+upload_port = COM10
+monitor_port = COM10
 
 [env:proto]
 build_flags = !python gitVersion.py -std=gnu++17  -DCORE_DEBUG_LEVEL=3
