--- a/firmware/esp32/platformio.ini
+++ b/firmware/esp32/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = proto
+default_envs = right
 
 ;this is not working for now
 [env:c3]
@@ -19,26 +19,16 @@ monitor_port = COM10
 
 [env:proto]
 build_flags = !python gitVersion.py -std=gnu++17  -DCORE_DEBUG_LEVEL=3
-upload_port = COM14
-monitor_port = COM14
+upload_port = COM22
+monitor_port = COM22
 
 [env:right]
 build_flags = !python gitVersion.py -std=gnu++17  -DCORE_DEBUG_LEVEL=3
-upload_port = COM21
-monitor_port = COM21
-
-[env:left]
-build_flags = !python gitVersion.py -std=gnu++17  -DLEFT_HAND
-upload_port = COM18
-monitor_port = COM18
-
-[env:home_right]
-build_flags = !python gitVersion.py -std=gnu++17  -DHOME_SERVOS
 upload_port = COM19
 monitor_port = COM19
 
-[env:home_left]
-build_flags = !python gitVersion.py -std=gnu++17  -DLEFT_HAND -DHOME_SERVOS
+[env:left]
+build_flags = !python gitVersion.py -std=gnu++17  -DLEFT_HAND
 upload_port = COM18
 monitor_port = COM18
 
