--- a/firmware/esp32/platformio.ini
+++ b/firmware/esp32/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = right
+default_envs = right, left
 
 ;this is not working for now
 [env:c3]
